k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: status-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-page
  namespace: status-page
  labels:
    app: status-page
spec:
  selector:
    matchLabels:
      app: status-page
  template:
    metadata:
      labels:
        app: status-page
    spec:
      serviceAccountName: status-page
      containers:
        - name: status-page
          image: ghcr.io/fangedhex/status-page:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: status-page
  namespace: status-page
spec:
  selector:
    app: status-page
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-page
  namespace: status-page
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - status.fhex.dev
      secretName: fhex-dev-tls
  rules:
    - host: "status.fhex.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status-page
                port:
                  number: 8080
